<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--add a new song to the database. It takes the following POST fields:-->
    <!--song - the song title;-->
    <!--artist - the artist;-->
    <!--year - the year of the song.-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAllCaps="true"
        android:textStyle="italic"
        android:fontFamily="serif-monospace"
        android:textSize="17pt"
        android:visibility="visible"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/song"
            android:textSize="8pt" />

        <EditText
            android:id="@+id/newsong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:hint="@string/songHint"
            android:inputType="text"
            android:textSize="8pt" />

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/artist"
            android:textSize="8pt" />

        <EditText
            android:id="@+id/newartist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/artistHint"
            android:inputType="text"
            android:textSize="8pt" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/year"
            android:textSize="8pt" />

        <EditText
            android:id="@+id/newyear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:hint="@string/yearHint"
            android:inputType="text"
            android:textSize="8pt" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAddSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/addSong" />

    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/postResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAllCaps="true"
            android:textStyle="italic"
            android:fontFamily="serif-monospace"
            android:textSize="17pt"
            android:visibility="invisible"
            android:layout_marginTop="20dp"
            android:padding="30dp"
            android:gravity="top"
            android:background="@color/colorAccent"/>
    </ScrollView>


</LinearLayout>